# aec-rater

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: d40a68b6bf27_first_revision.py
notebooks/: product_json.json
product_rater/: api_facades.py  io.py  records.py  scorer.py
product_rater/config/: __init__.py
product_rater/db/: session.py
product_rater/models/: __init__.py  _base.py  product.py  review.py
scorer/: main.py
scripts/: lint.sh  test.sh
src/: api_facades.py  records.py  request_params.py  scorer.py
tests/: test_api_facades.py  test_main_xd.py  test_records..py  test_records.py
tests/data/: product_json.json
