[tool.poetry]
name = "product-rater"
version = "0.1.0"
description = ""
authors = ["Albert Iribarne <albert.iribarne@gmail.com>", "Bernat Sopena <sopena.bernat@gmail.com>"]
readme = "README.md"
packages = [{include = "product_rater"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.3"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
pydantic-settings = "^2.0.2"
numpy = "^1.25.1"
pandas = "^2.0.3"
requests = "^2.31.0"


[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
ruff = "^0.0.280"
pandas-stubs = "^2.0.2.230605"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.mypy]
plugins = [
  "pydantic.mypy",
]
strict_optional = false
ignore_missing_imports = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    # "D",  # pydocstyle
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
    "B905",  # strict zip argument (remove when Python 3.10 is used)
]

[tool.ruff.per-file-ignores]
"bowser/cli/**.py" = ["B008"]

[tool.ruff.isort]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
